# cnk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml
benches/: compression.rs
examples/: README.md  compressed_postings.rs  roc_set_bounds.rs
src/: ans.rs  auto.rs  choose.rs  delta_varint.rs  elias_fano.rs  envelope.rs  error.rs  lib.rs  partitioned_elias_fano.rs  roc.rs  stats.rs  traits.rs  varint.rs
tests/: property_tests.proptest-regressions  property_tests.rs
