[package]
name = "cnk"
version = "0.1.1"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "ID set compression primitives (delta+varint, Elias-Fano; bits-back ROC planned)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/cnk"
keywords = ["compression", "entropy", "inverted-index"]
categories = ["compression", "algorithms"]

[features]
default = []
# Enable foundational ANS entropy coding (internal module; API may change).
ans = ["dep:ans"]
# Enable Elias-Fano and other succinct baselines
sbits = ["dep:sbits"]
# All features
full = ["ans", "sbits"]

[dependencies]
ans = { version = "0.1.0", optional = true }
sbits = { version = "0.1.0", optional = true }
crc32fast = "1.4"
[lib]
path = "src/lib.rs"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
postings = "0.1"

[[bench]]
name = "compression"
harness = false
